--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@symfony/webpack-encore": "0.22.*",
     "antd": "^3.11.1",
     "autoprefixer": "^9.4.2",
+    "babel-eslint": "^8.2.1",
     "beautifymarker": "1.0.7",
     "bootstrap-sass": "^3.3.7",
     "chai": "^4.2.0",
@@ -61,6 +62,9 @@
     "database-cleaner": "^1.3.0",
     "dom-autoscroller": "^2.3.4",
     "dragula": "^3.7.2",
+    "eslint": "^4.15.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "fontawesome-markers": "^4.6.1",
